--- a/CICloudGov/component.yaml
+++ b/CICloudGov/component.yaml
@@ -1,5 +1,5 @@
 documentation_complete: false
-name: CI Cloud.Gov Concourse Pipeline
+name: CI cloud.gov Concourse Pipeline
 satisfies:
 - control_key: SI-2
   covered_by:
@@ -9,12 +9,12 @@ satisfies:
     \ for effectiveness and potential side effects before installation.\n  \n####\
     \ c  \nInstalls security-relevant software and firmware updates within 30 daysrelease\
     \ of updates of the release of the updates.\n  \n#### d  \n18F incorporates flaw\
-    \ remediation into the its configuration management process. New versions of Cloud.gov\
+    \ remediation into the its configuration management process. New versions of cloud.gov\
     \ can easily recreated and deployed in the event of any system flaws.\n  \n"
   standard_key: NIST-800-53
 schema_version: 2.0
 verifications:
 - key: CONCOURSE_PIPELINE
-  name: CI Cloud.Gov Concourse Pipeline
+  name: CI cloud.gov Concourse Pipeline
   path: https://ci.cloud.gov/pipelines/deploy-cf
   type: URL
