--- a/CP_Policy/component.yaml
+++ b/CP_Policy/component.yaml
@@ -8,9 +8,11 @@ satisfies:
 - control_key: CP-1
   covered_by: []
   implementation_status: none
-  narrative: 18F Policy
+  narrative:
+    - text: |
+        18F Policy
   standard_key: NIST-800-53
-schema_version: 2.0
+schema_version: 3.0.0
 system: 18F
 verifications:
 - description: "GIVEN the github link - <policy> THEN the policy has been updated\
