--- a/SA_Policy/component.yaml
+++ b/SA_Policy/component.yaml
@@ -264,8 +264,9 @@ satisfies:
   - verification_key: DEPLOYMENT_TESTING
   narrative:
   - key: a
+    # https://18f.slack.com/archives/cloud-gov/p1465929760000146
     text: |-
-      TODO
+      The security assessment plan is created by the FedRAMP Accredited Third Pary Assessment Organzation (3PAO). It will It will be used for annual assessments conducted by the 3PAO for continuous monitoring of cloud.gov.
   - key: b
     text: |-
       TODO
