--- a/CloudCheckr/component.yaml
+++ b/CloudCheckr/component.yaml
@@ -123,4 +123,5 @@ satisfies:
   - key: c
     text: |
       For changes related to the virtual infrastructure, 18F uses VisualOps and Cloud Checkr for real-time configuration changes which are documented, approved and tracked within GitHub. All Cloud Foundry configuration changes are documented, approved and tracked within 18F's GitHub site.
+  standard_key: NIST-800-53
 schema_version: 3.0.0
