Update schema for RA-1

--- a/RA_Policy/component.yaml
+++ b/RA_Policy/component.yaml
@@ -4,7 +4,9 @@ satisfies:
 - control_key: RA-1
   covered_by: []
   implementation_status: none
-  narrative: 18F Policy
+  narrative:
+    - text: |
+        18F Policy
   standard_key: NIST-800-53
 - control_key: RA-5
   covered_by:
